Add GraphRAG hybrid system with smart query routing
Features:
- Neo4j graph store adapter with entity/relationship CRUD
- In-memory graph store fallback using NetworkX
- Smart query router (pattern matching + optional LLM)
- Entity extractor with rule-based and LLM modes
- MAVLink-specialized extractor for protocol documents
- Hybrid query endpoint combining vector and graph search
- Updated ingest to build knowledge graph alongside vector index

Configuration:
- ENABLE_GRAPH_RAG toggle
- GRAPH_STORE_BACKEND: neo4j or memory
- ROUTER_MODE: pattern or llm
- ENTITY_EXTRACTION_MODE: rule_based or llm
- ENTITY_EXTRACTION_DOMAIN: general or mavlink

Docker:
- Added Neo4j service with graphrag profile
- New service variants: rag-service-graphrag, rag-service-gpu-graphrag

Tests:
- Unit tests for router, extractor, and graph store

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
     "python-magic>=0.4.27;sys_platform!='win32'",
     "numpy>=1.24.0",
     "httpx>=0.26.0",
+    # GraphRAG dependencies
+    "networkx>=3.2.0",
 ]
 
 [project.optional-dependencies]
@@ -59,8 +61,11 @@ ocr = [
     "pytesseract>=0.3.10",
     "pdf2image>=1.16.0",
 ]
+graphrag = [
+    "neo4j>=5.15.0",
+]
 all = [
-    "rag-documentation-service[dev,gpu,ocr]",
+    "rag-documentation-service[dev,gpu,ocr,graphrag]",
 ]
 
 [project.urls]
