Add Gradio web interface with smart port detection
Features:
- Drag-and-drop file upload for document ingestion
- Folder indexing with recursive option
- Semantic search with strategy selection (auto/vector/graph/hybrid)
- Collection management (list, delete)
- System status monitoring
- Modern Soft theme with Inter font

Port Detection:
- Automatically finds available port starting from 7860
- Handles conflicts with other running applications

CLI Commands:
- rag-ui: Launch the web interface
- Options: --port, --api-url, --share

Documentation:
- Updated README with UI setup instructions
- Added GraphRAG configuration reference
- Updated project structure diagram
- Expanded API reference with new endpoints

--- a/.env.example
+++ b/.env.example
@@ -48,13 +48,48 @@ CHUNK_OVERLAP=50
 PDF_STRATEGY=fast
 
 # -----------------------------------------------------------------------------
+# GraphRAG Configuration
+# -----------------------------------------------------------------------------
+# Enable hybrid vector + graph retrieval
+ENABLE_GRAPH_RAG=false
+
+# Graph store backend: memory (NetworkX) or neo4j
+GRAPH_STORE_BACKEND=memory
+
+# Neo4j connection (only needed if GRAPH_STORE_BACKEND=neo4j)
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password
+
+# Query routing: pattern (rule-based) or llm (uses Ollama)
+ROUTER_MODE=pattern
+
+# Entity extraction: rule_based or llm (uses Ollama)
+ENTITY_EXTRACTION_MODE=rule_based
+
+# Extraction domain: general or mavlink (specialized for MAVLink protocols)
+ENTITY_EXTRACTION_DOMAIN=general
+
+# Ollama model for LLM-based routing/extraction (if enabled)
+OLLAMA_MODEL=llama3.2
+
+# -----------------------------------------------------------------------------
+# Web UI Configuration
+# -----------------------------------------------------------------------------
+# Port for Gradio UI (auto-detects available port if in use)
+UI_PORT=7860
+
+# Create public shareable link
+UI_SHARE=false
+
+# -----------------------------------------------------------------------------
 # API Configuration
 # -----------------------------------------------------------------------------
 HOST=0.0.0.0
 PORT=8000
 
 # CORS origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:7860
 
 # API prefix
 API_PREFIX=/api/v1
