--- a/requirements.txt
+++ b/requirements.txt
@@ -2,33 +2,33 @@
 # Generated from pyproject.toml
 
 # Core Framework
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
-pydantic-settings==2.2.1
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+pydantic-settings>=2.1.0
 
 # Vector Search
-faiss-cpu==1.8.0
-chromadb==0.4.24
+faiss-cpu>=1.7.4
+chromadb>=0.4.22
 
 # Embeddings
-sentence-transformers==2.5.1
-torch==2.2.1
+sentence-transformers>=2.3.0
+torch>=2.0.0
 
 # Document Processing
-unstructured==0.12.6
-pypdf==4.1.0
+unstructured>=0.15.0
+pypdf>=3.17.0
 
 # Platform-specific (handled in pyproject.toml)
 # python-magic-bin>=0.4.14;sys_platform=='win32'
 # python-magic>=0.4.27;sys_platform!='win32'
 
 # Utilities
-numpy==1.26.4
-httpx==0.27.0
+numpy>=1.24.0
+httpx>=0.26.0
 
 # GraphRAG
-networkx==3.2.1
+networkx>=3.2.0
 
 # Web UI
-gradio==4.44.0
+gradio>=4.44.0
 
