- Focus CI/CD consistency - Verifying CI tests across macOS, Linux, and Windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "pydantic-settings>=2.1.0",
     "pyyaml>=6.0",
-    "typer>=0.9.0",
+    "typer>=0.9.0,<1.0.0",
+    "click>=8.0.0,<9.0.0",
     "rich>=13.0.0",
     "structlog>=24.1.0",
     "faiss-cpu>=1.7.4",
@@ -130,7 +131,8 @@ indent-style = "space"
 python_version = "3.10"
 strict = true
 warn_return_any = true
-warn_unused_ignores = true
+# Disabled: type stubs differ between Windows and Linux, causing false positives
+warn_unused_ignores = false
 disallow_untyped_defs = true
 ignore_missing_imports = true
 
