--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,8 @@ jobs:
 
       - name: Run unit tests
         run: pytest tests/unit/ -v --tb=short
+        env:
+          CLICK_DISABLE_COLORS: "1"
 
       - name: Run integration tests
         run: pytest tests/integration/ -v --tb=short
@@ -111,6 +113,8 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest tests/ --cov=src/rag_service --cov-report=xml --cov-report=term-missing
+        env:
+          CLICK_DISABLE_COLORS: "1"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
